tests/ui/fmt/issue-91556.stderr
error: invalid format string: expected `'}'` but string was terminated
  --> $DIR/issue-91556.rs:2:19
   |
LL |   let _ = format!(concat!("{0}ð–³ð–¾ð—Œð—{"), i);
   |                   ^^^^^^^^^^^^^^^^^^^
   |                   |
   |                   expected `'}'` in format string
   |                   in this macro invocation
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `concat!`
   |
   = note: if you intended to print `{`, you can escape it using `{{`

error: aborting due to previous error

